@@ -20,8 +20,8 @@
 
 package com.openlattice.datastore.search.controllers;
 
+import com.codahale.metrics.annotation.Timed;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Preconditions;
 import com.google.common.base.Predicates;
 import com.google.common.collect.*;
 import com.openlattice.auditing.AuditEventType;
@@ -53,6 +53,7 @@ import java.time.OffsetDateTime;
 import java.util.*;
 import java.util.stream.Collectors;
 
+import static com.openlattice.authorization.EdmAuthorizationHelper.READ_PERMISSION;
 import static com.openlattice.postgres.DataTables.ID_FQN;
 
 @RestController
@@ -94,6 +95,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeEntitySetKeywordQuery(
             @RequestBody Search search ) {
         if ( !search.getOptionalKeyword().isPresent() && !search.getOptionalEntityType().isPresent()
@@ -114,6 +116,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.GET,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public Iterable<EntitySet> getPopularEntitySet() {
         return edm.getEntitySets();
 
@@ -124,6 +127,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.GET,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult getEntitySets(
             @PathVariable( START ) int start,
             @PathVariable( NUM_RESULTS ) int maxHits ) {
@@ -140,9 +144,22 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.PATCH,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public DataSearchResult searchEntitySetData( @RequestBody SearchConstraints searchConstraints ) {
+        // check read on entity sets
+        final var authorizedEntitySetIds = authorizationsHelper
+                .getAuthorizedEntitySets( Set.of( searchConstraints.getEntitySetIds() ), READ_PERMISSION );
 
-        DataSearchResult results = searchService.executeSearch( searchConstraints, Principals.getCurrentPrincipals() );
+        DataSearchResult results = new DataSearchResult( 0, Lists.newArrayList() );
+
+        // if user has read access on all normal entity sets
+        if ( authorizedEntitySetIds.size() == searchConstraints.getEntitySetIds().length) {
+            final var authorizedPropertyTypesByEntitySet = authorizationsHelper.getAuthorizedPropertiesOnEntitySets(
+                    authorizedEntitySetIds, READ_PERMISSION, Principals.getCurrentPrincipals() );
+
+            results = searchService
+                    .executeSearch( searchConstraints, authorizedPropertyTypesByEntitySet );
+        }
 
         List<AuditableEvent> searchEvents = Lists.newArrayList();
         for ( int i = 0; i < searchConstraints.getEntitySetIds().length; i++ ) {
@@ -159,7 +176,6 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         }
 
         recordEvents( searchEvents );
-
         return results;
     }
 
@@ -173,6 +189,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeOrganizationSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executeOrganizationKeywordSearch( searchTerm );
     }
@@ -182,52 +199,19 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public DataSearchResult executeEntitySetDataQuery(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @RequestBody SearchTerm searchTerm ) {
-        DataSearchResult dataSearchResult = new DataSearchResult( 0, Lists.newArrayList() );
 
-        Set<Principal> currentPrincipals = Principals.getCurrentPrincipals();
-
-        if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ),
-                currentPrincipals,
-                EnumSet.of( Permission.READ ) ) ) {
-            EntitySet es = edm.getEntitySet( entitySetId );
-            final Set<UUID> entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
-            final Set<UUID> authorizedEntitySets = entitySets.stream().filter( esId ->
-                    authorizations.checkIfHasPermissions(
-                            new AclKey( esId ),
-                            currentPrincipals,
-                            EnumSet.of( Permission.READ ) ) )
-                    .collect( Collectors.toSet() );
-
-            if ( authorizedEntitySets.size() == 0 ) {
-                logger.warn( "Read authorization failed for all the entity sets." );
-            } else {
-
-                dataSearchResult = searchService.executeSearch( SearchConstraints
-                                .simpleSearchConstraints(
-                                        new UUID[] { entitySetId },
-                                        searchTerm.getStart(),
-                                        searchTerm.getMaxHits(),
-                                        searchTerm.getSearchTerm(),
-                                        searchTerm.getFuzzy() ),
-                        currentPrincipals );
-            }
-        }
-
-        recordEvent( new AuditableEvent(
-                getCurrentUserId(),
-                new AclKey( entitySetId ),
-                AuditEventType.SEARCH_ENTITY_SET_DATA,
-                "Entity set data search through SearchApi.executeEntitySetDataQuery",
-                Optional.of( getEntityKeyIdsFromSearchResult( dataSearchResult ) ),
-                ImmutableMap.of( "query", searchTerm ),
-                OffsetDateTime.now(),
-                Optional.empty()
-        ) );
-
-        return dataSearchResult;
+        return searchEntitySetData(
+                SearchConstraints.simpleSearchConstraints(
+                        new UUID[]{ entitySetId },
+                        searchTerm.getStart(),
+                        searchTerm.getMaxHits(),
+                        searchTerm.getSearchTerm(),
+                        searchTerm.getFuzzy() )
+        );
     }
 
     @RequestMapping(
@@ -235,51 +219,18 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public DataSearchResult executeAdvancedEntitySetDataQuery(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @RequestBody AdvancedSearch search ) {
-        DataSearchResult dataSearchResult = new DataSearchResult( 0, Lists.newArrayList() );
 
-        Set<Principal> currentPrincipals = Principals.getCurrentPrincipals();
-
-        if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ),
-                Principals.getCurrentPrincipals(),
-                EnumSet.of( Permission.READ ) ) ) {
-
-            EntitySet es = edm.getEntitySet( entitySetId );
-            final Set<UUID> entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
-            final Set<UUID> authorizedEntitySets = entitySets.stream().filter( esId ->
-                    authorizations.checkIfHasPermissions(
-                            new AclKey( esId ),
-                            Principals.getCurrentPrincipals(),
-                            EnumSet.of( Permission.READ ) ) )
-                    .collect( Collectors.toSet() );
-
-            if ( authorizedEntitySets.size() == 0 ) {
-                logger.warn( "Read authorization failed for all the entity sets." );
-            } else {
-                dataSearchResult = searchService.executeSearch(
-                        SearchConstraints.advancedSearchConstraints(
-                                new UUID[] { entitySetId },
-                                search.getStart(),
-                                search.getMaxHits(),
-                                search.getSearches() ),
-                        currentPrincipals );
-            }
-        }
-
-        recordEvent( new AuditableEvent(
-                getCurrentUserId(),
-                new AclKey( entitySetId ),
-                AuditEventType.SEARCH_ENTITY_SET_DATA,
-                "Advanced entity set data search through SearchApi.executeAdvancedEntitySetDataQuery",
-                Optional.of( getEntityKeyIdsFromSearchResult( dataSearchResult ) ),
-                ImmutableMap.of( "query", search ),
-                OffsetDateTime.now(),
-                Optional.empty()
-        ) );
-
-        return dataSearchResult;
+        return searchEntitySetData(
+                SearchConstraints.advancedSearchConstraints(
+                        new UUID[]{ entitySetId },
+                        search.getStart(),
+                        search.getMaxHits(),
+                        search.getSearches() )
+        );
     }
 
     @RequestMapping(
@@ -287,6 +238,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeEntityTypeSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executeEntityTypeSearch( searchTerm.getSearchTerm(),
                 searchTerm.getStart(),
@@ -298,6 +250,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeAssociationTypeSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executeAssociationTypeSearch( searchTerm.getSearchTerm(),
                 searchTerm.getStart(),
@@ -309,6 +262,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executePropertyTypeSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executePropertyTypeSearch( searchTerm.getSearchTerm(),
                 searchTerm.getStart(),
@@ -320,6 +274,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeAppSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executeAppSearch( searchTerm.getSearchTerm(),
                 searchTerm.getStart(),
@@ -331,6 +286,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeAppTypeSearch( @RequestBody SearchTerm searchTerm ) {
         return searchService.executeAppTypeSearch( searchTerm.getSearchTerm(),
                 searchTerm.getStart(),
@@ -342,6 +298,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeFQNEntityTypeSearch( @RequestBody FQNSearchTerm searchTerm ) {
         return searchService.executeFQNEntityTypeSearch( searchTerm.getNamespace(),
                 searchTerm.getName(),
@@ -354,6 +311,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public SearchResult executeFQNPropertyTypeSearch( @RequestBody FQNSearchTerm searchTerm ) {
         return searchService.executeFQNPropertyTypeSearch( searchTerm.getNamespace(),
                 searchTerm.getName(),
@@ -366,6 +324,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.GET,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public List<NeighborEntityDetails> executeEntityNeighborSearch(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @PathVariable( ENTITY_ID ) UUID entityKeyId ) {
@@ -375,11 +334,24 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
-            neighbors = searchService
-                    .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ),
-                            new EntityNeighborsFilter( ImmutableSet.of( entityKeyId ) ), principals )
-                    .getOrDefault( entityKeyId, ImmutableList.of() );
+            EntitySet es = edm.getEntitySet( entitySetId );
 
+            final var entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
+            final var authorizedEntitySets = entitySets.stream()
+                    .filter( linkedEntitySetId ->
+                            authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
+                                    Principals.getCurrentPrincipals(),
+                                    EnumSet.of( Permission.READ ) ) )
+                    .collect( Collectors.toSet() );
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            } else {
+                neighbors = searchService
+                        .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ),
+                                new EntityNeighborsFilter( ImmutableSet.of( entityKeyId ) ), principals )
+                        .getOrDefault( entityKeyId, ImmutableList.of() );
+            }
         }
 
         UUID userId = getCurrentUserId();
@@ -429,6 +401,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public Map<UUID, List<NeighborEntityDetails>> executeEntityNeighborSearchBulk(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @RequestBody Set<UUID> entityKeyIds ) {
@@ -440,6 +413,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public Map<UUID, List<NeighborEntityDetails>> executeFilteredEntityNeighborSearch(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @RequestBody EntityNeighborsFilter filter ) {
@@ -448,8 +422,23 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         Map<UUID, List<NeighborEntityDetails>> result = Maps.newHashMap();
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
-            result = searchService
-                    .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ), filter, principals );
+
+            EntitySet es = edm.getEntitySet( entitySetId );
+
+            final var entitySets = ( es.isLinking() ) ? es.getLinkedEntitySets() : Set.of( entitySetId );
+            final var authorizedEntitySets = entitySets.stream()
+                    .filter( linkedEntitySetId ->
+                            authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
+                                    Principals.getCurrentPrincipals(),
+                                    EnumSet.of( Permission.READ ) ) )
+                    .collect( Collectors.toSet() );
+            if ( authorizedEntitySets.size() != entitySets.size() ) {
+                logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                        "is empty." );
+            } else {
+                result = searchService
+                        .executeEntityNeighborSearch( ImmutableSet.of( entitySetId ), filter, principals );
+            }
         }
 
 
@@ -457,16 +446,16 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         ListMultimap<UUID, UUID> neighborsByEntitySet = ArrayListMultimap.create();
 
-        result.values().forEach( neighborList -> {
-            neighborList.forEach( neighborEntityDetails -> {
-                neighborsByEntitySet.put( neighborEntityDetails.getAssociationEntitySet().getId(),
-                        getEntityKeyId( neighborEntityDetails.getAssociationDetails() ) );
-                if ( neighborEntityDetails.getNeighborEntitySet().isPresent() ) {
-                    neighborsByEntitySet.put( neighborEntityDetails.getNeighborEntitySet().get().getId(),
-                            getEntityKeyId( neighborEntityDetails.getNeighborDetails().get() ) );
-                }
-            } );
-        } );
+        result.values().forEach( neighborList ->
+                neighborList.forEach( neighborEntityDetails -> {
+                    neighborsByEntitySet.put( neighborEntityDetails.getAssociationEntitySet().getId(),
+                            getEntityKeyId( neighborEntityDetails.getAssociationDetails() ) );
+                    if ( neighborEntityDetails.getNeighborEntitySet().isPresent() ) {
+                        neighborsByEntitySet.put( neighborEntityDetails.getNeighborEntitySet().get().getId(),
+                                getEntityKeyId( neighborEntityDetails.getNeighborDetails().get() ) );
+                    }
+                } )
+        );
 
         List<AuditableEvent> events = new ArrayList<>( neighborsByEntitySet.keySet().size() + 1 );
         UUID userId = getCurrentUserId();
@@ -541,6 +530,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             method = RequestMethod.POST,
             produces = { MediaType.APPLICATION_JSON_VALUE } )
     @Override
+    @Timed
     public Map<UUID, Map<UUID, SetMultimap<UUID, NeighborEntityIds>>> executeFilteredEntityNeighborIdsSearch(
             @PathVariable( ENTITY_SET_ID ) UUID entitySetId,
             @RequestBody EntityNeighborsFilter filter ) {
@@ -549,19 +539,19 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
         Map<UUID, Map<UUID, SetMultimap<UUID, NeighborEntityIds>>> result = Maps.newHashMap();
         if ( authorizations.checkIfHasPermissions( new AclKey( entitySetId ), principals,
                 EnumSet.of( Permission.READ ) ) ) {
+
             EntitySet es = edm.getEntitySet( entitySetId );
+
             if ( es.isLinking() ) {
-                Preconditions.checkArgument(
-                        !es.getLinkedEntitySets().isEmpty(),
-                        "Linking entity sets does not consist of any entity sets." );
-                Set<UUID> authorizedEntitySets = es.getLinkedEntitySets().stream()
+                final Set<UUID> authorizedEntitySets = es.getLinkedEntitySets().stream()
                         .filter( linkedEntitySetId ->
                                 authorizations.checkIfHasPermissions( new AclKey( linkedEntitySetId ),
                                         Principals.getCurrentPrincipals(),
                                         EnumSet.of( Permission.READ ) ) )
                         .collect( Collectors.toSet() );
-                if ( authorizedEntitySets.size() == 0 ) {
-                    logger.warn( "Read authorization failed for all the linked entity sets." );
+                if ( authorizedEntitySets.size() != es.getLinkedEntitySets().size() ) {
+                    logger.warn( "Read authorization failed some of the normal entity sets of linking entity set or it " +
+                            "is empty." );
                 } else {
                     result = searchService
                             .executeLinkingEntityNeighborIdsSearch( authorizedEntitySets, filter, principals );
@@ -578,16 +568,16 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
 
         SetMultimap<UUID, UUID> neighborsByEntitySet = HashMultimap.create();
 
-        result.values().forEach( associationMap -> {
-            associationMap.entrySet().forEach( associationEntry -> {
-                associationEntry.getValue().entries().forEach( neighborEntry -> {
-                    neighborsByEntitySet
-                            .put( associationEntry.getKey(), neighborEntry.getValue().getAssociationEntityKeyId() );
-                    neighborsByEntitySet
-                            .put( neighborEntry.getKey(), neighborEntry.getValue().getNeighborEntityKeyId() );
-                } );
-            } );
-        } );
+        result.values().forEach( associationMap ->
+                associationMap.entrySet().forEach( associationEntry -> {
+                    associationEntry.getValue().entries().forEach( neighborEntry -> {
+                        neighborsByEntitySet
+                                .put( associationEntry.getKey(), neighborEntry.getValue().getAssociationEntityKeyId() );
+                        neighborsByEntitySet
+                                .put( neighborEntry.getKey(), neighborEntry.getValue().getNeighborEntityKeyId() );
+                    } );
+                } )
+        );
 
         List<AuditableEvent> events = new ArrayList<>( neighborsByEntitySet.keySet().size() + 1 );
         UUID userId = getCurrentUserId();
@@ -625,6 +615,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             path = { EDM + INDEX },
             method = RequestMethod.GET )
     @Override
+    @Timed
     public Void triggerEdmIndex() {
         ensureAdminAccess();
         searchService.triggerPropertyTypeIndex( Lists.newArrayList( edm.getPropertyTypes() ) );
@@ -640,6 +631,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             path = { ENTITY_SETS + INDEX + ENTITY_SET_ID_PATH },
             method = RequestMethod.GET )
     @Override
+    @Timed
     public Void triggerEntitySetDataIndex( @PathVariable( ENTITY_SET_ID ) UUID entitySetId ) {
         ensureAdminAccess();
         searchService.triggerEntitySetDataIndex( entitySetId );
@@ -650,6 +642,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             path = { ENTITY_SETS + INDEX },
             method = RequestMethod.GET )
     @Override
+    @Timed
     public Void triggerAllEntitySetDataIndex() {
         ensureAdminAccess();
         searchService.triggerAllEntitySetDataIndex();
@@ -660,6 +653,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             path = { ORGANIZATIONS + INDEX },
             method = RequestMethod.GET )
     @Override
+    @Timed
     public Void triggerAllOrganizationsIndex() {
         ensureAdminAccess();
         List<Organization> allOrganizations = Lists.newArrayList(
@@ -677,6 +671,7 @@ public class SearchController implements SearchApi, AuthorizingComponent, Auditi
             path = { ORGANIZATIONS + INDEX + ORGANIZATION_ID_PATH },
             method = RequestMethod.GET )
     @Override
+    @Timed
     public Void triggerOrganizationIndex( @PathVariable( ORGANIZATION_ID ) UUID organizationId ) {
         ensureAdminAccess();
         searchService.triggerOrganizationIndex( organizationService.getOrganization( organizationId ) );
